--- a/css/main.css
+++ b/css/main.css
@@ -279,7 +279,7 @@ div.header-about-text {
     align-items: center;
     display: flex;
     justify-content: space-around;
-    padding: 50px;
+    padding: 30px 10px;
     margin: 0 auto;
     max-width: 1300px
 }
@@ -297,7 +297,11 @@ div.header-about-text {
 
 
 .footer-contacts {
-    justify-content: space-evenly;
-    width: 50px;
-    height: auto;
+    display: flex;
+    gap: 15px;
+}
+
+.footer-contact{
+    min-width: 50px;
+    min-height: 50px;
 }
